# termdino

./: Cargo.toml  tech_plan.md  test_run.md
src/: lib.rs  main.rs
src/app/: game_loop.rs  mod.rs  state_manager.rs
src/core/: game_state.rs  mod.rs
src/core/entities/: dinosaur.rs  mod.rs  obstacle.rs
src/core/physics/: collision.rs  gravity.rs  mod.rs
src/error/: types.rs
src/input/: bindings.rs  handler.rs  mod.rs
src/render/: coordinate.rs  mod.rs  renderer.rs
src/render/widgets/: game_widget.rs  mod.rs  ui_widgets.rs
src/terminal/: manager.rs  mod.rs  utils.rs
src/utils/: config.rs  math.rs  mod.rs  timer.rs
