[package]
name = "termdino"
version = "0.1.0"
edition = "2024"
authors = ["July-Tea"]
description = "A terminal-based Chrome Dino game clone written in Rust"

[dependencies]
anyhow = "1.0.98"
crossterm = "0.29.0"
rand = "0.9.2"
ratatui = "0.29.0"
serde = "1.0.219"
tokio = { version = "1.46.1", features = ["full"] }
